fixed overall layout on smaller devices and began with the banner

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -550,113 +550,9 @@ aside {
 	}
 }
 
-@media only screen and (min-width: 1024px) {
-	body {
-		margin: auto;
-		.navbar .container { width: 940px; }
-		.container { width: 940px; }
-		.row { width: 960px; }
-		.span11 {
-			width: 860px;
-		}
-		.span7 {
-			width: 540px;
-		}
-		.span4 {
-			width: 300px;
-			margin-left: 20px;
-		}
-		.span3 {
-			width: 220px;
-		}
-	}
-}
-
-@media only screen and (max-width: 980px) {
-	#wrap .container .row { padding-top: 20px; }
-	.hero-unit .thumbnails {
-		li.span3 {
-			margin-left: 20px;
-			.thumbnail {
-				width: 160px;
-				height: 160px;
-				img {
-					width: 160px;
-				}
-			}
-		}
-		li.span5 {
-			margin-left: 20px;
-		}
-	}
-	#page_content, #podcast_description, #episode_description,
-	#episode_chapter_marks {
-		width: 80%;
-	}
-}
-
-@media only screen and (max-width: 768px) {
-	.hero-unit .thumbnails {
-		li.span3 {
-			margin-left: 20px;
-			.thumbnail {
-				width: 160px;
-				height: 160px;
-				img {
-					width: 160px;
-				}
-			}
-		}
-		li.span5 {
-			margin-left: 20px;
-		}
-	}
-}
-
-
 @media only screen and (max-width: 766px) {
-	body { padding: 0 }
 	#wrap { padding: 0 20px }
-	.small-11 { margin-left: 0 }
-}
-
-@media only screen and (max-width: 690px) {
-	#wrap .container .row { padding-top: 0; }
-	.hero-unit {
-		padding: 25px 8px;
-		.thumbnails {
-			li.span3 {
-				margin-left: 3%;
-				.thumbnail {
-					width: 140px;
-					height: 140px;
-					img {
-						width: 140px;
-					}
-				}
-			}
-		}
-	}
-}
-
-
-@media only screen and (max-width: 560px) {
-	#wrap .container .row { padding-top: 0; }
-	.hero-unit {
-		padding: 25px 8px;
-		.thumbnails {
-			li.span3 {
-				margin-left: 4%;
-				.thumbnail {
-					width: 120px;
-					height: 120px;
-					img {
-						width: 120px;
-					}
-				}
-			}
-		}
-	}
+	#episodes { margin-left: 0 }
 }
 
 @media only screen and (max-width: 480px) {
